# cocoa-agent

./: .gitignore  README.md  decrypt.py  encrypt.py  inference_main.py  pyproject.toml
agents/: __init__.py  base.py  cocoa_agent.py  openai_deep_research_agent.py
cocoabench-example-tasks/linear-regime-estimation/: task.yaml
cocoabench-head/: README.md
cocoabench-head/arrow-hunt/: canary.txt  evaluation.md  evaluation.md.enc  instruction.md  instruction.md.enc  metadata.json  metadata.json.enc  solution.md  solution.md.enc
cocoabench-head/bear-statue-building-direction/: Dockerfile  canary.txt  task.yaml.enc  test.py.enc
cocoabench-head/bts-flight-ontime-rate/: canary.txt  task.yaml.enc  test.py.enc
cocoabench-head/campus-walking-time-estimate/: Dockerfile  canary.txt  task.yaml.enc  test.py.enc
cocoabench-head/eight-puzzle-game-2/: canary.txt  task.yaml.enc  test.py.enc
cocoabench-head/fire-fighter/: canary.txt  evaluation.md.enc  instruction.md.enc  metadata.json.enc  solution.md.enc
cocoabench-head/geometry-area-calculation/: Dockerfile  canary.txt  task.yaml.enc  test.py.enc
cocoabench-head/glp1-pharmaceutical-analysis/: canary.txt  task.yaml.enc  test.py.enc
cocoabench-head/google-trends-ai-models/: Dockerfile  canary.txt  task.yaml.enc  test.py.enc
configs/: default_gpt.json
contrib/: CONTRIBUTING.md  create_task.py  decrypt_tasks.py  encrypt_tasks.py  list_tasks.py  validate_task.py
docs/: evaluation.md  sandbox-api.md
executor/: __init__.py  controller.py  sandbox.py  tools.py
visualizer/: index.html  server.py
(+114 files in other folders)
